--- a/SpringMvc0100/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMvc0100/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,9 @@
 
 <!-- config dispatcher servlet -->
 <servlet>
-	<servlet-name>Springmvc</servlet-name>
+	<servlet-name>springmvc</servlet-name>
 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	<load-on-startup>1</load-on-startup>
 </servlet>
 
 <servlet-mapping>
